--- a/app/src/main/res/layout/fragment_ciudades.xml
+++ b/app/src/main/res/layout/fragment_ciudades.xml
@@ -54,6 +54,15 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:tint="@color/white" />
 
+        <ImageView
+            android:id="@+id/imageView"
+            android:onClick="@{()->viewModel.actualizar()}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_update_24"
+            app:layout_constraintEnd_toEndOf="@+id/textView"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
