--- a/app/src/main/res/layout/fragment_detalle.xml
+++ b/app/src/main/res/layout/fragment_detalle.xml
@@ -26,192 +26,216 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="15dp"
-            android:layout_weight="1"
-            android:background="#4DB6AC"
-            android:orientation="vertical"
-            android:padding="4dp">
+            android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/tvCiudad"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="16dp"
-                android:text="@{viewModel.weather.name}"
-                android:textColor="#000000"
-                android:textSize="34sp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="SANTA FE" />
-
-            <TextView
-                android:id="@+id/tvTemp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="72dp"
-                app:doubleTemperatura="@{viewModel.weather.temp}"
-                android:textColor="#000000"
-                android:textSize="48sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/tvMax"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/tvMin"
-                app:layout_constraintTop_toBottomOf="@+id/tvCiudad"
-                tools:text="23C" />
-
-            <TextView
-                android:id="@+id/tvSensacion"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:textColor="#000000"
-                android:textSize="34sp"
-                app:layout_constraintBottom_toTopOf="@+id/tvPressure"
-                app:layout_constraintStart_toEndOf="@+id/textView5"
-                app:layout_constraintTop_toBottomOf="@+id/textView3"
-                app:doubleTemperatura="@{viewModel.weather.feels_like}"
-                tools:text="25ºC" />
-
-            <TextView
-                android:id="@+id/tvMin"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:doubleTemperatura="@{viewModel.weather.temp_min}"
-                android:textColor="#000000"
-                android:textSize="34sp"
-                app:layout_constraintBaseline_toBaselineOf="@+id/tvTemp"
-                app:layout_constraintEnd_toStartOf="@+id/tvTemp"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:text="12C" />
-
-            <TextView
-                android:id="@+id/tvMax"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:doubleTemperatura="@{viewModel.weather.temp_max}"
-                android:textColor="#000000"
-                android:textSize="34sp"
-                app:layout_constraintBaseline_toBaselineOf="@+id/tvTemp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/tvTemp"
-                tools:text="27C" />
-
-            <TextView
-                android:id="@+id/tvPressure"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                app:intPrecipitaciones="@{viewModel.weather.pressure}"
-                android:textColor="#000000"
-                android:textSize="24sp"
-                app:layout_constraintBottom_toTopOf="@+id/tvHumidity"
-                app:layout_constraintStart_toEndOf="@+id/textView7"
-                app:layout_constraintTop_toBottomOf="@+id/tvSensacion"
-                tools:text="1000" />
-
-            <TextView
-                android:id="@+id/tvHumidity"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                app:intHumedad="@{viewModel.weather.humidity}"
-                android:textColor="#000000"
-                android:textSize="24sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/textView6"
-                app:layout_constraintTop_toBottomOf="@+id/tvPressure"
-                tools:text="87%" />
-
-            <TextView
-                android:id="@+id/tvAviso"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{viewModel.weather.ultimaActualizacion.toString()}"
-                android:textColor="#FF0000"
-                android:visibility="@{viewModel.aviso}"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                tools:text="13/07/21 13:00" />
-
-            <TextView
-                android:id="@+id/tvNotificacion"
-                android:layout_width="333dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="84dp"
-                android:text="@{viewModel.notificacion}"
-                android:textColor="#636363"
-                android:visibility="visible"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="notificaciones" />
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="82dp"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraintLayout"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:gravity="center"
-                android:text="@string/tv_S_temp_min"
-                app:layout_constraintEnd_toEndOf="@+id/tvMin"
-                app:layout_constraintHorizontal_bias="0.456"
-                app:layout_constraintStart_toStartOf="@+id/tvMin"
-                app:layout_constraintTop_toBottomOf="@+id/tvMin" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="82dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/tv_S_temp"
-                app:layout_constraintEnd_toEndOf="@+id/tvTemp"
-                app:layout_constraintStart_toStartOf="@+id/tvTemp"
-                app:layout_constraintTop_toBottomOf="@+id/tvTemp" />
+                <TextView
+                    android:id="@+id/tvCiudad"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="24dp"
+                    android:text="@{viewModel.weather.name}"
+                    android:textColor="#000000"
+                    android:textSize="34sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="SANTA FE" />
 
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="82dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/tv_S_temp_max"
-                app:layout_constraintEnd_toEndOf="@+id/tvMax"
-                app:layout_constraintStart_toStartOf="@+id/tvMax"
-                app:layout_constraintTop_toBottomOf="@+id/tvMax" />
+                <TextView
+                    android:id="@+id/tvNotificacion"
+                    android:layout_width="333dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="@{viewModel.notificacion}"
+                    android:textColor="#272424"
+                    android:visibility="visible"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tvCiudad"
+                    tools:text="notificaciones" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <TextView
-                android:id="@+id/textView5"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/tv_S_sensacion"
-                app:layout_constraintBaseline_toBaselineOf="@+id/tvSensacion"
-                app:layout_constraintStart_toStartOf="parent" />
+                android:layout_height="0dp"
+                android:layout_margin="15dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="16dp"
+                android:layout_weight="1"
+                android:background="#4DB6AC"
+                android:orientation="vertical"
+                android:padding="4dp"
+                android:visibility="@{viewModel.datos}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
 
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/tv_S_temp_humedad"
-                android:textAlignment="textEnd"
-                app:layout_constraintBaseline_toBaselineOf="@+id/tvHumidity"
-                app:layout_constraintEnd_toEndOf="@+id/textView7"
-                app:layout_constraintStart_toStartOf="parent" />
+                <TextView
+                    android:id="@+id/tvTemp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="32dp"
+                    android:textColor="#000000"
+                    android:textSize="48sp"
+                    android:textStyle="bold"
+                    app:doubleTemperatura="@{viewModel.weather.temp}"
+                    app:layout_constraintEnd_toStartOf="@+id/tvMax"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toEndOf="@+id/tvMin"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="23C" />
 
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/tv_S_presipitaciones"
-                android:textAlignment="textEnd"
-                app:layout_constraintBaseline_toBaselineOf="@+id/tvPressure"
-                app:layout_constraintEnd_toEndOf="@+id/textView5"
-                app:layout_constraintStart_toStartOf="parent" />
+                <TextView
+                    android:id="@+id/tvSensacion"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:textColor="#000000"
+                    android:textSize="34sp"
+                    app:doubleTemperatura="@{viewModel.weather.feels_like}"
+                    app:layout_constraintBottom_toTopOf="@+id/tvPressure"
+                    app:layout_constraintStart_toEndOf="@+id/textView5"
+                    app:layout_constraintTop_toBottomOf="@+id/textView3"
+                    tools:text="25ºC" />
+
+                <TextView
+                    android:id="@+id/tvMin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000000"
+                    android:textSize="34sp"
+                    app:doubleTemperatura="@{viewModel.weather.temp_min}"
+                    app:layout_constraintBaseline_toBaselineOf="@+id/tvTemp"
+                    app:layout_constraintEnd_toStartOf="@+id/tvTemp"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:text="12C" />
+
+                <TextView
+                    android:id="@+id/tvMax"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000000"
+                    android:textSize="34sp"
+                    app:doubleTemperatura="@{viewModel.weather.temp_max}"
+                    app:layout_constraintBaseline_toBaselineOf="@+id/tvTemp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toEndOf="@+id/tvTemp"
+                    tools:text="27C" />
+
+                <TextView
+                    android:id="@+id/tvPressure"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:textColor="#000000"
+                    android:textSize="24sp"
+                    app:intPrecipitaciones="@{viewModel.weather.pressure}"
+                    app:layout_constraintBottom_toTopOf="@+id/tvHumidity"
+                    app:layout_constraintStart_toEndOf="@+id/textView7"
+                    app:layout_constraintTop_toBottomOf="@+id/tvSensacion"
+                    tools:text="1000" />
+
+                <TextView
+                    android:id="@+id/tvHumidity"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:textColor="#000000"
+                    android:textSize="24sp"
+                    app:intHumedad="@{viewModel.weather.humidity}"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/textView6"
+                    app:layout_constraintTop_toBottomOf="@+id/tvPressure"
+                    tools:text="87%" />
+
+                <TextView
+                    android:id="@+id/tvAviso"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{viewModel.weather.ultimaActualizacion.toString()}"
+                    android:textColor="#FF0000"
+                    android:visibility="@{viewModel.aviso}"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    tools:text="13/07/21 13:00" />
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="82dp"
+                    android:layout_height="0dp"
+                    android:gravity="center"
+                    android:text="@string/tv_S_temp_min"
+                    app:layout_constraintEnd_toEndOf="@+id/tvMin"
+                    app:layout_constraintHorizontal_bias="0.456"
+                    app:layout_constraintStart_toStartOf="@+id/tvMin"
+                    app:layout_constraintTop_toBottomOf="@+id/tvMin" />
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="82dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/tv_S_temp"
+                    app:layout_constraintEnd_toEndOf="@+id/tvTemp"
+                    app:layout_constraintStart_toStartOf="@+id/tvTemp"
+                    app:layout_constraintTop_toBottomOf="@+id/tvTemp" />
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="82dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/tv_S_temp_max"
+                    app:layout_constraintEnd_toEndOf="@+id/tvMax"
+                    app:layout_constraintStart_toStartOf="@+id/tvMax"
+                    app:layout_constraintTop_toBottomOf="@+id/tvMax" />
+
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/tv_S_sensacion"
+                    app:layout_constraintBaseline_toBaselineOf="@+id/tvSensacion"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/tv_S_temp_humedad"
+                    android:textAlignment="textEnd"
+                    app:layout_constraintBaseline_toBaselineOf="@+id/tvHumidity"
+                    app:layout_constraintEnd_toEndOf="@+id/textView7"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/tv_S_presipitaciones"
+                    android:textAlignment="textEnd"
+                    app:layout_constraintBaseline_toBaselineOf="@+id/tvPressure"
+                    app:layout_constraintEnd_toEndOf="@+id/textView5"
+                    app:layout_constraintStart_toStartOf="parent" />
 
 
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.cardview.widget.CardView>
 </layout>
