--- a/app/src/main/res/layout/lista_ciudades.xml
+++ b/app/src/main/res/layout/lista_ciudades.xml
@@ -44,12 +44,14 @@
 
                 <TextView
                     android:id="@+id/tvName"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
                     android:text="@{ciudad.name}"
                     android:textColor="#000000"
                     android:textSize="24sp"
                     android:textStyle="bold"
+                    app:layout_constraintEnd_toStartOf="@+id/tvTemperatura"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="SANTA FE" />
